--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -80,8 +80,8 @@
                     <!-- Register Card -->
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="mb-2">Adventure starts here 🚀</h4>
-                            <p class="mb-4">Make your app management easy and fun!</p>
+                            <h4 class="mb-2">Que la aventura empiece 🚀</h4>
+                            <p class="mb-4">Registrate para realizar tus compras!</p>
 
                         <form asp-action="Register" method="post">
                             <div class="form-group">
